# python-template

./: .gitignore  pyproject.toml
.github/workflows/: release.yaml  release.yml
